==> theawsomeavr/Attiny85_Playtune_master/Attiny85_Playtune/Attiny85_Playtune.cpp <==
 #include "Attiny85_Playtune.h"
#define NUM_CHANS 3 // number of speaker outputs

void Attiny85Playtune::tune_initchan(byte pin,byte pin1,byte pin2) {
	SPEAKER0=pin; SPEAKER1=pin1; SPEAKER2=pin2;
	squarewavespins[0]=pin;
	squarewavespins[1]=pin1;
	squarewavespins[2]=pin2;
	DDRB = (1<<SPEAKER0)+(1<<SPEAKER1)+(1<<SPEAKER2);

}

void tune_playnote (byte chan, byte note) {

    //if (chan < NUM_CHANS) {
        if (note>MAX_NOTE) note=MAX_NOTE;
        decrement[chan] = pgm_read_dword(decrement_PGM + note);
        accumulator[chan] = ACCUM_RESTART;
        playing[chan]=true;
  //  }
}

void tune_stopnote (byte chan) {
    playing[chan]= false;
	
	PORTB = (0<<squarewavespins[chan]);
}
