==> LenShustek/Playtune_Teensy/Playtune_Teensy.cpp <==
#include <Arduino.h>
#include <avr/interrupt.h>
#include "Playtune.h"
   #define DBUG 0          // debugging?
#define ASSUME_VOLUME 0    // assume volume information is present in bytestream files without headers?
#define TESLA_COIL 0       // special Tesla Coil version?
#define AVAILABLE_TIMERS 4 // what the Cortex M4 on the Teensy 3.2 MK20DX256VLH7 processor has
#define HDR_F1_VOLUME_PRESENT 0x80
#define HDR_F1_INSTRUMENTS_PRESENT 0x40
#define HDR_F1_PERCUSSION_PRESENT 0x20

void tune_initchan(byte pin) {
   if (_tune_num_chans < AVAILABLE_TIMERS) {
      byte chan = _tune_num_chans;
      _tune_pins[chan] = pin;
      pinMode(pin, OUTPUT);
      #if DBUG
      Serial.print("init pin "); Serial.print(pin);
      Serial.print(" on channel "); Serial.println(chan);
      #endif
      _tune_num_chans++; } }

void tune_playnote (byte chan, byte note) {
   #if DBUG
   Serial.print ("Play at ");
   Serial.print(score_cursor - score_start, HEX);
   Serial.print(", ch");
   Serial.print(chan); Serial.print(' ');
   Serial.print(note, HEX);
   #endif
   if (chan < _tune_num_chans) {
      #if TESLA_COIL
      note = teslacoil_checknote(chan, note);  // let teslacoil modify the note
      #endif
      if (note > 127) note = 127;
      unsigned int frequency8 = pgm_read_dword (tune_frequencies8_PGM + note);
      if (chan == 0) {
         wait_timer_frequency8 = frequency8;
         wait_timer_playing = true; }
      // for Tesla coils, interrupt at the true note frequency, not twice that
      unsigned int interval = (TESLA_COIL ? 8000000UL : 4000000UL) / frequency8;
      timers[chan]->begin(ISRs[chan], interval); // usec period
      #if DBUG
      Serial.print(" usec "); Serial.print(interval);
      #endif
   }
   #if DBUG
   Serial.println();
   #endif
}

void tune_stopnote (byte chan) {
   #if DBUG
   Serial.print ("Stop note ");
   Serial.println(chan, DEC);
   #endif
   if (chan < _tune_num_chans) {
      #if !TESLA_COIL
      byte pin = _tune_pins[chan];
      *portClearRegister(pin) = digitalPinToBitMask(pin); // make pin low
      #endif
      if (chan == 0)
         wait_timer_playing = false;
      else  // if not the channel we use to time waits,
         timers[chan]->end(); // stop the timer
   } }
